flux/system/webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: webhook-receiver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd

spec:
  tls:
    - hosts:
        - flux-webhook-receiver.ops.bootleg.technology
      secretName: flux-webhook-receiver-ops-bootleg-technology
  rules:
    - host: flux-webhook-receiver.ops.bootleg.technology
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  name: http-webhook
